Refactor switch cases for Java 17 syntax